# generic-discord-alternative

./: Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am
data/man/: Makefile.am  genericdiscordalternative.1  genericdiscordalternative.1.in
data/misc/: Makefile.am  genericdiscordalternative.desktop.in.in
src/fe-gtk/: fe-gtk.c  fe-gtk.h
